qt/gen_qwizard.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
bool QWizard_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QWizard_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QWizard_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QWizard_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QWizard_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QWizard_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QWizard_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QWizard_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QWizard_override_virtual_wheelEvent(void* self, intptr_t slot);
void QWizard_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QWizard_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QWizard_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QWizard_override_virtual_focusInEvent(void* self, intptr_t slot);
void QWizard_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QWizard_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QWizard_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QWizard_override_virtual_enterEvent(void* self, intptr_t slot);
void QWizard_virtualbase_enterEvent(void* self, QEvent* event);
bool QWizard_override_virtual_leaveEvent(void* self, intptr_t slot);
void QWizard_virtualbase_leaveEvent(void* self, QEvent* event);
bool QWizard_override_virtual_moveEvent(void* self, intptr_t slot);
void QWizard_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QWizard_override_virtual_tabletEvent(void* self, intptr_t slot);
void QWizard_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QWizard_override_virtual_actionEvent(void* self, intptr_t slot);
void QWizard_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QWizard_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QWizard_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QWizard_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QWizard_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QWizard_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QWizard_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QWizard_override_virtual_dropEvent(void* self, intptr_t slot);
void QWizard_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QWizard_override_virtual_hideEvent(void* self, intptr_t slot);
void QWizard_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QWizard_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QWizard_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QWizard_override_virtual_changeEvent(void* self, intptr_t slot);
void QWizard_virtualbase_changeEvent(void* self, QEvent* param1);
bool QWizard_override_virtual_metric(void* self, intptr_t slot);
int QWizard_virtualbase_metric(const void* self, int param1);
bool QWizard_override_virtual_initPainter(void* self, intptr_t slot);
void QWizard_virtualbase_initPainter(const void* self, QPainter* painter);
bool QWizard_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QWizard_virtualbase_redirected(const void* self, QPoint* offset);
bool QWizard_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QWizard_virtualbase_sharedPainter(const void* self);
bool QWizard_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QWizard_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QWizard_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QWizard_virtualbase_inputMethodQuery(const void* self, int param1);
bool QWizard_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QWizard_virtualbase_focusNextPrevChild(void* self, bool next);
bool QWizard_override_virtual_timerEvent(void* self, intptr_t slot);
void QWizard_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QWizard_override_virtual_childEvent(void* self, intptr_t slot);
void QWizard_virtualbase_childEvent(void* self, QChildEvent* event);
bool QWizard_override_virtual_customEvent(void* self, intptr_t slot);
void QWizard_virtualbase_customEvent(void* self, QEvent* event);
bool QWizard_override_virtual_connectNotify(void* self, intptr_t slot);
void QWizard_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QWizard_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QWizard_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QWizard_delete(QWizard* self);
QWizardPage* QWizardPage_new(QWidget* parent);
QWizardPage* QWizardPage_new2();
QMetaObject* QWizardPage_metaObject(const QWizardPage* self);
void* QWizardPage_metacast(QWizardPage* self, const char* param1);
int QWizardPage_metacall(QWizardPage* self, int param1, int param2, void** param3);
struct miqt_string QWizardPage_tr(const char* s);
struct miqt_string QWizardPage_trUtf8(const char* s);
void QWizardPage_setTitle(QWizardPage* self, struct miqt_string title);
struct miqt_string QWizardPage_title(const QWizardPage* self);
void QWizardPage_setSubTitle(QWizardPage* self, struct miqt_string subTitle);
struct miqt_string QWizardPage_subTitle(const QWizardPage* self);
void QWizardPage_setPixmap(QWizardPage* self, int which, QPixmap* pixmap);
QPixmap* QWizardPage_pixmap(const QWizardPage* self, int which);
void QWizardPage_setFinalPage(QWizardPage* self, bool finalPage);
bool QWizardPage_isFinalPage(const QWizardPage* self);
void QWizardPage_setCommitPage(QWizardPage* self, bool commitPage);
bool QWizardPage_isCommitPage(const QWizardPage* self);
void QWizardPage_setButtonText(QWizardPage* self, int which, struct miqt_string text);
struct miqt_string QWizardPage_buttonText(const QWizardPage* self, int which);
void QWizardPage_initializePage(QWizardPage* self);
void QWizardPage_cleanupPage(QWizardPage* self);
bool QWizardPage_validatePage(QWizardPage* self);
bool QWizardPage_isComplete(const QWizardPage* self);
int QWizardPage_nextId(const QWizardPage* self);
void QWizardPage_completeChanged(QWizardPage* self);
void QWizardPage_connect_completeChanged(QWizardPage* self, intptr_t slot);
struct miqt_string QWizardPage_tr2(const char* s, const char* c);
struct miqt_string QWizardPage_tr3(const char* s, const char* c, int n);
struct miqt_string QWizardPage_trUtf82(const char* s, const char* c);
struct miqt_string QWizardPage_trUtf83(const char* s, const char* c, int n);
bool QWizardPage_override_virtual_metacall(void* self, intptr_t slot);
int QWizardPage_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QWizardPage_override_virtual_initializePage(void* self, intptr_t slot);
void QWizardPage_virtualbase_initializePage(void* self);
bool QWizardPage_override_virtual_cleanupPage(void* self, intptr_t slot);
void QWizardPage_virtualbase_cleanupPage(void* self);