qt/gen_qwizard.nim

proc fQWizard_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_mousePressEvent".}
proc fcQWizard_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_mousePressEvent".}
proc fQWizard_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_mouseReleaseEvent".}
proc fcQWizard_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_mouseReleaseEvent".}
proc fQWizard_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_mouseDoubleClickEvent".}
proc fcQWizard_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_mouseDoubleClickEvent".}
proc fQWizard_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_mouseMoveEvent".}
proc fcQWizard_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_mouseMoveEvent".}
proc fQWizard_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_wheelEvent".}
proc fcQWizard_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_wheelEvent".}
proc fQWizard_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_keyReleaseEvent".}
proc fcQWizard_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_keyReleaseEvent".}
proc fQWizard_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_focusInEvent".}
proc fcQWizard_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_focusInEvent".}
proc fQWizard_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_focusOutEvent".}
proc fcQWizard_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_focusOutEvent".}
proc fQWizard_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_enterEvent".}
proc fcQWizard_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_enterEvent".}
proc fQWizard_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_leaveEvent".}
proc fcQWizard_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_leaveEvent".}
proc fQWizard_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_moveEvent".}
proc fcQWizard_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_moveEvent".}
proc fQWizard_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_tabletEvent".}
proc fcQWizard_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_tabletEvent".}
proc fQWizard_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_actionEvent".}
proc fcQWizard_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_actionEvent".}
proc fQWizard_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_dragEnterEvent".}
proc fcQWizard_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_dragEnterEvent".}
proc fQWizard_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_dragMoveEvent".}
proc fcQWizard_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_dragMoveEvent".}
proc fQWizard_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_dragLeaveEvent".}
proc fcQWizard_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_dragLeaveEvent".}
proc fQWizard_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_dropEvent".}
proc fcQWizard_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_dropEvent".}
proc fQWizard_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_hideEvent".}
proc fcQWizard_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_hideEvent".}
proc fQWizard_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QWizard_virtualbase_nativeEvent".}
proc fcQWizard_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_nativeEvent".}
proc fQWizard_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QWizard_virtualbase_changeEvent".}
proc fcQWizard_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_changeEvent".}
proc fQWizard_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QWizard_virtualbase_metric".}
proc fcQWizard_override_virtual_metric(self: pointer, slot: int) {.importc: "QWizard_override_virtual_metric".}
proc fQWizard_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QWizard_virtualbase_initPainter".}
proc fcQWizard_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QWizard_override_virtual_initPainter".}
proc fQWizard_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QWizard_virtualbase_redirected".}
proc fcQWizard_override_virtual_redirected(self: pointer, slot: int) {.importc: "QWizard_override_virtual_redirected".}
proc fQWizard_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QWizard_virtualbase_sharedPainter".}
proc fcQWizard_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QWizard_override_virtual_sharedPainter".}
proc fQWizard_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QWizard_virtualbase_inputMethodEvent".}
proc fcQWizard_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_inputMethodEvent".}
proc fQWizard_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QWizard_virtualbase_inputMethodQuery".}
proc fcQWizard_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QWizard_override_virtual_inputMethodQuery".}
proc fQWizard_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QWizard_virtualbase_focusNextPrevChild".}
proc fcQWizard_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QWizard_override_virtual_focusNextPrevChild".}
proc fQWizard_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_timerEvent".}
proc fcQWizard_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_timerEvent".}
proc fQWizard_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_childEvent".}
proc fcQWizard_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_childEvent".}
proc fQWizard_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWizard_virtualbase_customEvent".}
proc fcQWizard_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWizard_override_virtual_customEvent".}
proc fQWizard_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWizard_virtualbase_connectNotify".}
proc fcQWizard_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWizard_override_virtual_connectNotify".}
proc fQWizard_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWizard_virtualbase_disconnectNotify".}
proc fcQWizard_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWizard_override_virtual_disconnectNotify".}
proc fcQWizard_delete(self: pointer) {.importc: "QWizard_delete".}
proc fcQWizardPage_new(parent: pointer): ptr cQWizardPage {.importc: "QWizardPage_new".}
proc fcQWizardPage_new2(): ptr cQWizardPage {.importc: "QWizardPage_new2".}
proc fcQWizardPage_metaObject(self: pointer, ): pointer {.importc: "QWizardPage_metaObject".}
proc fcQWizardPage_metacast(self: pointer, param1: cstring): pointer {.importc: "QWizardPage_metacast".}
proc fcQWizardPage_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWizardPage_metacall".}
proc fcQWizardPage_tr(s: cstring): struct_miqt_string {.importc: "QWizardPage_tr".}
proc fcQWizardPage_trUtf8(s: cstring): struct_miqt_string {.importc: "QWizardPage_trUtf8".}
proc fcQWizardPage_setTitle(self: pointer, title: struct_miqt_string): void {.importc: "QWizardPage_setTitle".}
proc fcQWizardPage_title(self: pointer, ): struct_miqt_string {.importc: "QWizardPage_title".}
proc fcQWizardPage_setSubTitle(self: pointer, subTitle: struct_miqt_string): void {.importc: "QWizardPage_setSubTitle".}
proc fcQWizardPage_subTitle(self: pointer, ): struct_miqt_string {.importc: "QWizardPage_subTitle".}
proc fcQWizardPage_setPixmap(self: pointer, which: cint, pixmap: pointer): void {.importc: "QWizardPage_setPixmap".}
proc fcQWizardPage_pixmap(self: pointer, which: cint): pointer {.importc: "QWizardPage_pixmap".}
proc fcQWizardPage_setFinalPage(self: pointer, finalPage: bool): void {.importc: "QWizardPage_setFinalPage".}
proc fcQWizardPage_isFinalPage(self: pointer, ): bool {.importc: "QWizardPage_isFinalPage".}
proc fcQWizardPage_setCommitPage(self: pointer, commitPage: bool): void {.importc: "QWizardPage_setCommitPage".}
proc fcQWizardPage_isCommitPage(self: pointer, ): bool {.importc: "QWizardPage_isCommitPage".}
proc fcQWizardPage_setButtonText(self: pointer, which: cint, text: struct_miqt_string): void {.importc: "QWizardPage_setButtonText".}
proc fcQWizardPage_buttonText(self: pointer, which: cint): struct_miqt_string {.importc: "QWizardPage_buttonText".}
proc fcQWizardPage_initializePage(self: pointer, ): void {.importc: "QWizardPage_initializePage".}
proc fcQWizardPage_cleanupPage(self: pointer, ): void {.importc: "QWizardPage_cleanupPage".}
proc fcQWizardPage_validatePage(self: pointer, ): bool {.importc: "QWizardPage_validatePage".}
proc fcQWizardPage_isComplete(self: pointer, ): bool {.importc: "QWizardPage_isComplete".}
proc fcQWizardPage_nextId(self: pointer, ): cint {.importc: "QWizardPage_nextId".}
proc fcQWizardPage_completeChanged(self: pointer, ): void {.importc: "QWizardPage_completeChanged".}
proc fQWizardPage_connect_completeChanged(self: pointer, slot: int) {.importc: "QWizardPage_connect_completeChanged".}
proc fcQWizardPage_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWizardPage_tr2".}
proc fcQWizardPage_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWizardPage_tr3".}
proc fcQWizardPage_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWizardPage_trUtf82".}
proc fcQWizardPage_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWizardPage_trUtf83".}
proc fQWizardPage_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QWizardPage_virtualbase_metacall".}
proc fcQWizardPage_override_virtual_metacall(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_metacall".}
proc fQWizardPage_virtualbase_initializePage(self: pointer, ): void{.importc: "QWizardPage_virtualbase_initializePage".}
proc fcQWizardPage_override_virtual_initializePage(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_initializePage".}
proc fQWizardPage_virtualbase_cleanupPage(self: pointer, ): void{.importc: "QWizardPage_virtualbase_cleanupPage".}
proc fcQWizardPage_override_virtual_cleanupPage(self: pointer, slot: int) {.importc: "QWizardPage_override_virtual_cleanupPage".}
